--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
         <!--Joab Amos D. Viado-->
     </head>
     <body>
-        <header>
-            <section id="top">
-                <h1>Navigation and Links</h1>
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-                <p>This is your home page, also known as the index.html page. On this page we will discuss how to code navigation and links with examples.</p>
-            </section>
+        <header id="top">
+            <h1>Navigation and Links</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <p>This is your home page, also known as the index.html page. On this page we will discuss how to code navigation and links with examples.</p>
         </header>
         <section>
             <h2>Links</h2>
