--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
             </section>
         </section>
 
-        <h2>Navigation</h2>
-            <p>Navigation is coded using an unordered list because navigation is a list of web pages. As mentioned above, relative hyperlinks are used when coding navigation. When you view your navigation html in a browser, you will notice that by default it is vertical and has bullets. This is because the navigation is created in an unordered list. The appearance of the navigation can be changed to be horizontal with styling, but for now we are interested in understanding how to code semantic navigation with links.</p>
+        <section>
+            <h2>Navigation</h2>
+                <p>Navigation is coded using an unordered list because navigation is a list of web pages. As mentioned above, relative hyperlinks are used when coding navigation. When you view your navigation html in a browser, you will notice that by default it is vertical and has bullets. This is because the navigation is created in an unordered list. The appearance of the navigation can be changed to be horizontal with styling, but for now we are interested in understanding how to code semantic navigation with links.</p>
+        </section>
         <a href="#top">Back to Top</a>
     </body>
 </html>
